Revert "Move benchmark to its own folder"
This reverts commit 6dca8d66da262093943797c699110a2af4cd9629.

--- a/Localization/BUILD
+++ b/Localization/BUILD
@@ -7,3 +7,13 @@ cc_library(
         "@eigen//:eigen3",
     ],
 )
+
+cc_binary(
+    name = "benchmark",
+    srcs = ["benchmark.cpp"],
+    deps = [
+        ":models_2d",
+        "//Localization/extended_kalman_filter",
+        "@google_benchmark//:benchmark_main",
+    ],
+)
