--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,7 +5,7 @@
 		"args": {
 			"BAZELISK_VERSION": "v1.18.0",
 			"BUILDIFIER_VERSION": "6.3.3",
-			"BAZEL_COMDB_VERSION": "0.5.2"
+			"BAZEL_COMPDB_VERSION": "0.5.2"
 		}
 	},
 	"features": {
