--- a/Localization/extended_kalman_filter/BUILD
+++ b/Localization/extended_kalman_filter/BUILD
@@ -20,3 +20,13 @@ cc_binary(
         "@eigen//:eigen3",
     ],
 )
+
+cc_binary(
+    name = "benchmark",
+    srcs = ["benchmark.cpp"],
+    deps = [
+        "//Localization:models_2d",
+        "//Localization/extended_kalman_filter",
+        "@google_benchmark//:benchmark_main",
+    ],
+)
