Add readme cli tests

--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -19,4 +19,4 @@ jobs:
       - name: Run tests
         id: run_tests
         shell: bash
-        run: .scripts/create_animations_test.sh
+        run: .scripts/readme_cli_test.sh
