Update dockerfile to add system-level dependencies

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -7,9 +7,6 @@ RUN if [ "${BAZELISK_VERSION}" != "none" ]; then \
     fi \
     && rm -f /tmp/install-bazel.sh
 
-RUN apt-get update \
-    && DEBIAN_FRONTEND=noninteractive apt-get -y install --no-install-recommends gnuplot
-
 ARG BUILDIFIER_VERSION="none"
 COPY ./install-buildifier.sh /tmp/
 RUN if [ "${BUILDIFIER_VERSION}" != "none" ]; then \
@@ -23,3 +20,6 @@ RUN if [ "${BAZEL_COMPDB_VERSION}" != "none" ]; then \
         chmod +x /tmp/install-bazel-compdb.sh && /tmp/install-bazel-compdb.sh ${BAZEL_COMPDB_VERSION}; \
     fi \
     && rm -f /tmp/install-bazel-compdb.sh
+
+RUN apt-get update \
+    && DEBIAN_FRONTEND=noninteractive apt-get -y install --no-install-recommends clang-tidy-11 gnuplot python3-numpy python3-matplotlib
