Add python extension

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,7 +16,8 @@
 			"settings": {},
 			"extensions": [
 				"ms-vscode.cpptools-extension-pack",
-				"BazelBuild.vscode-bazel"
+				"BazelBuild.vscode-bazel",
+				"ms-python.python"
 			]
 		}
 	},
