Add missing python3-tk

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -22,4 +22,4 @@ RUN if [ "${BAZEL_COMPDB_VERSION}" != "none" ]; then \
     && rm -f /tmp/install-bazel-compdb.sh
 
 RUN apt-get update \
-    && DEBIAN_FRONTEND=noninteractive apt-get -y install --no-install-recommends clang-tidy-11 gnuplot black python3-numpy python3-matplotlib
+    && DEBIAN_FRONTEND=noninteractive apt-get -y install --no-install-recommends clang-tidy-11 gnuplot black python3-numpy python3-matplotlib python3-tk
