--- a/Localization/extended_kalman_filter/BUILD
+++ b/Localization/extended_kalman_filter/BUILD
@@ -1,9 +1,10 @@
+load("@plot_deps//:requirements.bzl", "requirement")
 load("@rules_cc//cc:defs.bzl", "cc_binary")
+load("@rules_python//python:defs.bzl", "py_binary")
 
 cc_library(
     name = "utils",
     hdrs = ["utils.h"],
-    visibility = ["//visibility:public"],
     deps = [
         "//Localization:models_2d",
         "@eigen//:eigen3",
@@ -13,7 +14,6 @@ cc_library(
 cc_library(
     name = "mjyc",
     hdrs = ["mjyc.h"],
-    visibility = ["//visibility:public"],
     deps = [
         ":utils",
         "//Localization:models_2d",
@@ -24,9 +24,18 @@ cc_library(
 cc_library(
     name = "onlytailei",
     hdrs = ["onlytailei.h"],
-    visibility = ["//visibility:public"],
+    deps = ["@eigen//:eigen3"],
+)
+
+cc_binary(
+    name = "benchmark",
+    srcs = ["benchmark.cpp"],
     deps = [
-        "@eigen//:eigen3",
+        ":utils",
+        ":mjyc",
+        ":onlytailei",
+        "//Localization:models_2d",
+        "@google_benchmark//:benchmark_main",
     ],
 )
 
@@ -40,14 +49,18 @@ cc_binary(
     ],
 )
 
-cc_binary(
-    name = "benchmark",
-    srcs = ["benchmark.cpp"],
-    deps = [
-        ":utils",
-        ":mjyc",
-        ":onlytailei",
-        "//Localization:models_2d",
-        "@google_benchmark//:benchmark_main",
-    ],
+py_binary(
+  name = "plot",
+  srcs = ["plot.py"],
+  deps =[
+    requirement("numpy"),
+    requirement("matplotlib"),
+  ]
+)
+
+genrule(
+    name = "generate_plot",
+    outs = ["simulate_output.txt", "plot.png"],
+    cmd = "./$(location :simulate) $(location simulate_output.txt) && ./$(location :plot) $(location simulate_output.txt) $(location plot.png)",
+    tools = [":simulate", ":plot"],
 )
