Update astar to use genrule

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
   // https://github.com/bazelbuild/vscode-bazel/issues/223
   "bazel.queriesShareServer": true,
+  "black-formatter.path": [
+    "/usr/bin/black"
+  ],
   // https://github.com/microsoft/vscode-cpptools/issues/722
   "C_Cpp.autoAddFileAssociations": false, 
   "C_Cpp.codeAnalysis.clangTidy.enabled": true,
@@ -9,11 +12,11 @@
     "-checks=clang-diagnostic-*,clang-analyzer-*,cppcoreguidelines-*,modernize-*,-modernize-use-trailing-return-type,-cppcoreguidelines-avoid-magic-numbers"
   ],
   "C_Cpp.codeAnalysis.clangTidy.path": "/usr/bin/clang-tidy-11",
+  "[cpp]": {
+    "editor.formatOnSave": true,
+  },
   "[python]": {
     "editor.defaultFormatter": "ms-python.black-formatter",
     "editor.formatOnSave": true,
   },
-  "black-formatter.path": [
-    "/usr/bin/black"
-  ],
 }
