--- a/.bazelrc
+++ b/.bazelrc
@@ -1,2 +1,3 @@
-# For all builds, use c++20
-build --cxxopt="-std=c++20"
+# For all builds, use c++17
+build --cxxopt="-std=c++17"
+build --host_cxxopt="-std=c++17"
