--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -22,4 +22,4 @@ RUN if [ "${BAZEL_COMPDB_VERSION}" != "none" ]; then \
     && rm -f /tmp/install-bazel-compdb.sh
 
 RUN apt-get update \
-    && DEBIAN_FRONTEND=noninteractive apt-get -y install --no-install-recommends clang-tidy-11 clang-format-11 python3-pip python3-tk black isort
+    && DEBIAN_FRONTEND=noninteractive apt-get -y install --no-install-recommends  python3-pip python3-tk clang-tidy-11 clang-format-11 black isort
